--- a/.github/workflows/packagecloud_dev.yml
+++ b/.github/workflows/packagecloud_dev.yml
@@ -9,6 +9,28 @@ on:
       - test
   
 jobs:
+  Deb:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Create Debs
+        uses: ./build
+        id: build
+        with:
+          repo: Ombi-app/Ombi
+          maintainer: Berserkir-Wolf <contact@berserkir.net>
+          name: ombi
+          version: ${{ github.event.inputs.version }}
+          description: |
+            Want a Movie or TV Show on Plex or Emby? Use Ombi!
+            Ombi is a self-hosted web application that automatically gives your
+            shared Plex or Emby users the ability to request content by themselves!
+            Ombi can be linked to multiple TV Show and Movie DVR tools to create
+            a seamless end-to-end experience for your users.  
+  
   deploy:
     runs-on: ubuntu-latest
     steps:
