--- a/.github/workflows/packagecloud_dev.yml
+++ b/.github/workflows/packagecloud_dev.yml
@@ -35,7 +35,7 @@ jobs:
             Ombi can be linked to multiple TV Show and Movie DVR tools to create
             a seamless end-to-end experience for your users.  
   
-  deploy:
+  publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
